--- a/server.properties
+++ b/server.properties
@@ -18,10 +18,11 @@ gamemode=survival
 hardcore=false
 hide-online-players=false
 level-name=world
+level-seed=blocky-go-round
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=Official server for Blocky Go Round (v0.1.0)
+motd=Official server for Blocky Go Round (v0.2.0)
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
