Incorporate new ore-spawning system with Geolosys

--- a/config/backpacked-common.toml
+++ b/config/backpacked-common.toml
@@ -8,11 +8,11 @@
 	backpackInventorySizeColumns = 9
 	#The amount of slot rows in the backpack inventory.
 	#Range: 1 ~ 7
-	backpackInventorySize = 2
+	backpackInventorySize = 3
 
 	[common.wandering_trader]
 		#If enabled, allows wandering traders to have a backpack equipped when they spawn.
-		spawnBackpackOnWanderingTraders = true
+		spawnBackpackOnWanderingTraders = false
 		#The chance a Wandering Trader will spawn with a backpack. The chance is interpreted as one out of x, with x being the number given from this config option.
 		#Range: 1 ~ 100
 		wanderingTraderBackpackChance = 2
