--- a/config/jei-client.toml
+++ b/config/jei-client.toml
@@ -12,10 +12,10 @@
 	CheatToHotbarUsingHotkeysEnabled = false
 	#How items should be handed to you
 	#Allowed Values: INVENTORY, MOUSE_PICKUP
-	GiveMode = "MOUSE_PICKUP"
+	GiveMode = "INVENTORY"
 	#Max number of columns shown
 	#Range: 4 ~ 100
-	MaxColumns = 9
+	MaxColumns = 12
 	#Max. recipe gui height
 	#Range: > 175
 	RecipeGuiHeight = 350
