--- a/config/lightmanscurrency-common.toml
+++ b/config/lightmanscurrency-common.toml
@@ -23,15 +23,15 @@
 		#Whether coins can be dropped by entities that were spawned by the vanilla spawner.
 		enableSpawnerEntityDrops = false
 		#Entities that will occasionally drop copper coins.
-		copper = ["minecraft:slime", "minecraft:silverfish"]
+		copper = []
 		#Entities that will occasionally drop copper -> iron coins.
-		iron = ["minecraft:zombie", "minecraft:skeleton", "minecraft:creeper", "minecraft:spider", "minecraft:cave_spider", "minecraft:husk", "minecraft:stray", "minecraft:magma_cube", "minecraft:zombie_villager", "minecraft:drowned"]
+		iron = []
 		#Entities that will occasionally drop copper -> gold coins.
-		gold = ["minecraft:guardian", "minecraft:elder_guardian", "minecraft:phantom", "minecraft:blaze", "minecraft:ghast", "minecraft:witch", "minecraft:hoglin", "minecraft:piglin_brute", "minecraft:piglin", "minecraft:zombified_piglin"]
+		gold = []
 		#Entities that will occasionally drop copper -> emerald coins.
-		emerald = ["minecraft:enderman", "minecraft:evoker", "minecraft:vindicator", "minecraft:pillager", "minecraft:ravager", "minecraft:shulker"]
+		emerald = []
 		#Entities that will occasionally drop copper -> diamond coins.
-		diamond = ["minecraft:wither_skeleton"]
+		diamond = []
 		#Entities that will occasionally drop copper -> netherite coins.
 		netherite = []
 		#Entities that will drop a large amount of copper coins.
@@ -43,24 +43,24 @@
 		#Entities that will drop a large amount of copper -> emerald coins.
 		boss_emerald = []
 		#Entities that will drop a large amount of copper -> diamond coins.
-		boss_diamond = ["minecraft:ender_dragon"]
+		boss_diamond = []
 		#Entities that will drop a large amount of copper -> netherite coins.
-		boss_netherite = ["minecraft:wither"]
+		boss_netherite = []
 
 	#Chest loot settings.
 	[common.chest_loot]
 		#Whether coins can spawn in chests Does not effect entity loot drops.
 		enableChestLoot = false
 		#Chests that will occasionally spawn copper coins.
-		copper = ["minecraft:chests/underwater_ruin_small", "minecraft:chests/underwater_ruin_big"]
+		copper = []
 		#Chests that will occasionally spawn copper -> iron coins.
 		iron = []
 		#Chests that will occasionally spawn copper -> gold coins.
-		gold = ["minecraft:chests/jungle_temple", "minecraft:chests/nether_bridge", "minecraft:chests/simple_dungeon", "minecraft:chests/ruined_portal"]
+		gold = []
 		#Chests that will occasionally spawn copper -> emerald coins.
-		emerald = ["minecraft:chests/stronghold_crossing", "minecraft:chests/stronghold_corridor", "minecraft:chests/stronghold_library"]
+		emerald = []
 		#Chests that will occasionally spawn copper -> diamond coins.
-		diamond = ["minecraft:chests/buried_treasure", "minecraft:chests/bastion_hoglin_stable", "minecraft:chests/bastion_bridge", "minecraft:chests/bastion_other", "minecraft:chests/bastion_treasure", "minecraft:chests/end_city_treasure"]
+		diamond = []
 		#Chests that will occasionally spawn copper -> netherite coins.
 		netherite = []
 
