--- a/config/supplementaries-common.toml
+++ b/config/supplementaries-common.toml
@@ -21,9 +21,9 @@
 
 	[blocks.rope]
 		#Allows ropes to be supported & attached to solid block sides
-		block_side_attachment = false
+		block_side_attachment = true
 		#Makes sliding down ropes as fast as free falling, still negating fall damage
-		slide_on_fall = true
+		slide_on_fall = false
 
 	[blocks.pedestal]
 		#If enabled end crystals placed on a pedestals will provide an enchantment power bonus equivalent to 3 bookshelves
