--- a/config/jmi-client.toml
+++ b/config/jmi-client.toml
@@ -2,13 +2,13 @@
 #Client-Side Integration
 [FTBChunks]
 	#Enable FTBChunks Integration
-	ftbChunks = true
+	ftbChunks = false
 	#Range: 0.0 ~ 1.0
 	claimedChunkOverlayOpacity = 0.22222299873828888
 	#Disable conflict functions for FTBChunks (MiniMap, Waypoint beam, Death waypoint)
 	disableFTBFunction = true
 	#Show chunk claiming screen first instead of large map screen.
-	showClaimChunkScreen = true
+	showClaimChunkScreen = false
 
 [Waystones]
 	#Enable Waystones Integration
