--- a/config/nohostilesaroundcampfire-common.toml
+++ b/config/nohostilesaroundcampfire-common.toml
@@ -4,7 +4,7 @@
 	#Range: 1 ~ 128
 	preventHostilesRadius = 48
 	#If enabled, burns all hostile mobs around the campfire within the radius whenever a player places a campfire.
-	burnHostilesAroundWhenPlaced = true
+	burnHostilesAroundWhenPlaced = false
 	#By default set to 0.5. This means that if the radius is 16, the campfire burns prior mobs in a radius of 8.
 	#Range: 0.0 ~ 1.0
 	burnHostilesRadiusModifier = 0.5
