Add recipes for processing Geolosys gemstone ore

--- a/journeymap/config/5.8/journeymap.minimap.config
+++ b/journeymap/config/5.8/journeymap.minimap.config
@@ -53,7 +53,7 @@
   "showGrid": "false",
   "showCaves": "true",
   "showEntityNames": "true",
-  "preferredMapType": "biome",
+  "preferredMapType": "day",
   "zoomLevel": "0",
   "configVersion": "5.8.1"
 }
