Update Lightman's Currency and adjust world seed

--- a/server.properties
+++ b/server.properties
@@ -18,7 +18,7 @@ gamemode=survival
 hardcore=false
 hide-online-players=false
 level-name=world
-level-seed=blocky-go-round
+level-seed=bravo
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
